# twitter-auth-cli

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: pre-commit.yaml  python-ci.yaml
tests/: test_version.py
twitter_cli/: api.py  apikey.py  cli.py  config.py  display.py
