[tool.poetry]
name = "twitter-cli"
version = "0.1.0"
description = ""
authors = ["lbrealdev <lbrealdeveloper@gmail.com>"]
readme = "README.md"
packages = [{include = "twitter_cli"}]

[tool.poetry.dependencies]
python = "^3.7"
click = "8.1.3"
rich = "12.6.0"
requests-oauthlib = "1.3.1"
pytest = "7.1.3"
coverage = "^6.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
twittercli = "twitter_cli.cli:cli"